grade distribution updated; presentation details updated

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -189,14 +189,14 @@
     "<h1 style=\"background-color:black; color:white; font-size:36px; padding:5px 0 5px 0; text-align:center;\">\n",
     "Grading</h1>\n",
     "\n",
-    "## Homework Assignments (30 points)\n",
-    "There will be 3 homework assignments throughout the semester (10 points each). Homework assignments will be posted on Canvas. Students are expected to turn in their homework assignments on Canvas before the deadline.\n",
+    "## Homework Assignments (45 points)\n",
+    "There will be 3 homework assignments throughout the semester (15 points each). Homework assignments will be posted on Canvas. Students are expected to turn in their homework assignments on Canvas before the deadline.\n",
     "\n",
     "\n",
-    "## Chapter / Journal Presentation (40 points)\n",
-    "Each student will present a chapter from the textbook (20 points), and a journal article (20 points). Each student can sign up for the chapter / topic they are interested in presenting. For a journal presentation, instructor will suggest a paper related to the topic. A presentation can be informal (up to 45min), but should cover these aspects:\n",
-    "  * **Summarizing the materials**: Summary of the method / technique presented in the chapter or paper\n",
-    "  * **Critical review of the paper** (for journal presentation only): Strengths / weaknesses of the paper\n",
+    "## Chapter / Journal Presentation (20 points)\n",
+    "Each student will present a chapter from the textbook, or a journal article . Each student can sign up for the chapter / topic they are interested in presenting. For a journal presentation, instructor will suggest a paper related to the topic. A presentation can be informal (up to 45min), but should cover these aspects:\n",
+    "  * **Chapter presentation**: Summary of the methods / techniques presented in the chapter; explain why such methods / techniques are necessary, and how those methods work.\n",
+    "  * **Journal presentation**: Summary of the materials, as well as strengths / weaknesses of the paper\n",
     "  \n",
     "Each presentation will be evaluated by other students in open peer reviews. All students are\n",
     "expected to have read the reading material prior to the class.\n",
@@ -204,7 +204,7 @@
     "Students may switch their presentation dates with another student, with a permission from the instructor. However, the chapter / topic may not be changed and remains as outlined on the syllabus.\n",
     "\n",
     "\n",
-    "## Final Project (20 points)\n",
+    "## Final Project (25 points)\n",
     "There will be a final project at the end of semester. This is a group project, with 2-3 students per team, processing and/or analyzing fMRI. Students will be given a list of projects\n",
     "prior to the final project, and each student will choose a project of interest. Those selecting the same project will be organized into teams. Each team will work collectively to address the problem and present their results to the class.\n",
     "\n",
