grade distribution updated; presentation details updated

--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -180,25 +180,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Grading\n",
+    "##### Grading\n",
     "<hr style=\"height:1px;border:none\" />\n",
     "\n",
-    "## Homework assignments (30 points)\n",
+    "## Homework assignments (45 points)\n",
     "* Three homework assignments throughout the semester\n",
-    "* Each is worth 10 points\n",
+    "* Each is worth 15 points\n",
     "\n",
     "\n",
-    "## Chapter / Journal Presentation (40 points)\n",
-    "Each student will present a chapter from the textbook (20 points), and a journal article (20 points). Journal club-style informal presentation & discussion. Each presentation & discussion should be ~45 min.\n",
-    "  * **Summarizing the materials**: Summary of the method / technique presented in the chapter or paper\n",
-    "  * **Critical review of the paper** (for journal presentation only): Strengths / weaknesses of the paper\n",
+    "## Chapter / Journal Presentation (20 points)\n",
+    "Each student will present a chapter from the textbook, or a journal article. Journal club-style informal presentation & discussion. Each presentation & discussion should be ~45 min.\n",
+    "  * **Chapter presentation**: Summary of the methods / techniques presented in the chapter; explain why such methods / techniques are necessary, and how those methods work.\n",
+    "  * **Journal presentation**: Summary of the materials, as well as strengths / weaknesses of the paper\n",
     "\n",
-    "Sign-up on this web site [URL to be added].\n",
+    "Sign-up on this [web site](https://utexas.qualtrics.com/jfe/form/SV_4JB4as53NKHI2Hj).\n",
     "\n",
     "* Papers\n",
     "  * Suggested by the instructor\n",
-    "  * Or chosen by a student, with an approval from the instructor\n",
-    "  * Distributed via Canvas the week before\n",
+    "  * Distributed via Canvas\n",
     "  * Everybody is expected to have read the paper\n",
     "* Peer evaluation\n",
     "  * Online evaluation -- everybody (except the presenter) fills out\n",
@@ -206,7 +205,7 @@
     "  * All students must turn in the review -- the instructor will remind those who haven't turned in the review.\n",
     "  \n",
     "  \n",
-    "## Final project (20 points)\n",
+    "## Final project (25 points)\n",
     "* Group project with 2-3 students\n",
     "* Processing and/or analysis of fMRI data\n",
     "* Two class periods\n",
