Presentation schedule updated

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -361,7 +361,7 @@
     "        <td style=\"text-align:center;\">9/23</td> \n",
     "        <td style=\"text-align:center;\">Pre-processing</td>\n",
     "        <td style=\"text-align:center;\">Chapter 3</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Christian Sweet</td>\n",
     "        <td style=\"text-align:center;\">NIfTI & BIDS, Motion correction</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
@@ -369,7 +369,7 @@
     "        <td style=\"text-align:center;\">9/30</td> \n",
     "        <td style=\"text-align:center;\">Spatial normalization</td>\n",
     "        <td style=\"text-align:center;\">Chapter 4</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Will Adams</td>\n",
     "        <td style=\"text-align:center;\">Normalization, quality control</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
@@ -377,7 +377,7 @@
     "        <td style=\"text-align:center;\">10/7</td> \n",
     "        <td style=\"text-align:center;\">Processing pipeline</td>\n",
     "        <td style=\"text-align:center;\">Esteban et al., Nature Methods 2019</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
     "        <td style=\"text-align:center;\">fMRIPrep</td>\n",
     "        <td style=\"text-align:center;\">HW1 due</td>\n",
     "    </tr>\n",
@@ -385,7 +385,7 @@
     "        <td style=\"text-align:center;\">10/14</td> \n",
     "        <td style=\"text-align:center;\">Temporal modeling</td>\n",
     "        <td style=\"text-align:center;\">Chapter 5.1-5.2</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Eliya Ben-Asher</td>\n",
     "        <td style=\"text-align:center;\">First-level analysis</td>\n",
     "        <td style=\"text-align:center;\"></td>\n",
     "    </tr>\n",
@@ -393,7 +393,7 @@
     "        <td style=\"text-align:center;\">10/21</td> \n",
     "        <td style=\"text-align:center;\">Group analysis</td>\n",
     "        <td style=\"text-align:center;\">Chapter 6</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Gary Robinaugh</td>\n",
     "        <td style=\"text-align:center;\">Second-level analysis</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
@@ -401,7 +401,7 @@
     "        <td style=\"text-align:center;\">10/28</td> \n",
     "        <td style=\"text-align:center;\">Statistical inference</td>\n",
     "        <td style=\"text-align:center;\">Chapter 7.1-7.3</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Can Xu</td>\n",
     "        <td style=\"text-align:center;\">Multiple comparison corrections</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
@@ -425,7 +425,7 @@
     "        <td style=\"text-align:center;\">11/18</td> \n",
     "        <td style=\"text-align:center;\">Multi-voxel pattern analysis (MVPA)</td>\n",
     "        <td style=\"text-align:center;\">Haxby et al., Science 2001</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Justin Kilmarx</td>\n",
     "        <td style=\"text-align:center;\">Classification with nilearn</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
@@ -433,7 +433,7 @@
     "        <td style=\"text-align:center;\">11/25</td> \n",
     "        <td style=\"text-align:center;\">Searchlight</td>\n",
     "        <td style=\"text-align:center;\">Kriegeskorte et al., PNAS 2006</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Allison Bruning</td>\n",
     "        <td style=\"text-align:center;\">Searchlight with nilearn</td>\n",
     "        <td style=\"text-align:center;\"></td>\n",
     "    </tr>\n",
@@ -449,7 +449,7 @@
     "        <td style=\"text-align:center;\">12/9</td> \n",
     "        <td style=\"text-align:center;\">Cloud computing</td>\n",
     "        <td style=\"text-align:center;\">Avesani et al., PsyArXiv 2019</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
     "        <td style=\"text-align:center;\">Final project presentations</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
