--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -394,7 +394,7 @@
     "        <td style=\"text-align:center;\">Group analysis</td>\n",
     "        <td style=\"text-align:center;\">Chapter 6</td>\n",
     "        <td style=\"text-align:center;\">Gary Robinaugh</td>\n",
-    "        <td style=\"text-align:center;\">Second-level analysis</td>\n",
+    "        <td style=\"text-align:center;\">First-level analysis  (cont'd), Second-level analysis</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
     "    <tr>\n",
@@ -402,7 +402,7 @@
     "        <td style=\"text-align:center;\">Statistical inference</td>\n",
     "        <td style=\"text-align:center;\">Chapter 7.1-7.3</td>\n",
     "        <td style=\"text-align:center;\">Can Xu</td>\n",
-    "        <td style=\"text-align:center;\">Multiple comparison corrections</td>\n",
+    "        <td style=\"text-align:center;\">Second-level analysis (cont'd), Multiple comparison corrections</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
     "    <tr>\n",
@@ -410,7 +410,7 @@
     "        <td style=\"text-align:center;\">Study design</td>\n",
     "        <td style=\"text-align:center;\">Chapter 5.3</td>\n",
     "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
-    "        <td style=\"text-align:center;\">Some statistical exercises</td>\n",
+    "        <td style=\"text-align:center;\">Multiple comparison corrections (cont'd)</td>\n",
     "        <td style=\"text-align:center;\">HW2 due</td>\n",
     "    </tr>\n",
     "    <tr>\n",
@@ -418,7 +418,7 @@
     "        <td style=\"text-align:center;\">Machine learning basics</td>\n",
     "        <td style=\"text-align:center;\"></td>\n",
     "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
-    "        <td style=\"text-align:center;\">Scikit-learn, nilearn</td>\n",
+    "        <td style=\"text-align:center;\">Scikit-learn, nilearn, TensorFlow & Keras</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
     "    <tr>\n",
@@ -434,7 +434,7 @@
     "        <td style=\"text-align:center;\">Searchlight</td>\n",
     "        <td style=\"text-align:center;\">Kriegeskorte et al., PNAS 2006</td>\n",
     "        <td style=\"text-align:center;\">Allison Bruning</td>\n",
-    "        <td style=\"text-align:center;\">Searchlight with nilearn</td>\n",
+    "        <td style=\"text-align:center;\">CNN with TensorFlow</td>\n",
     "        <td style=\"text-align:center;\"></td>\n",
     "    </tr>\n",
     "    <tr>\n",
