Schedule change for 11/4 -- just covering multiple comparison

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -402,7 +402,7 @@
     "        <td style=\"text-align:center;\">Statistical inference</td>\n",
     "        <td style=\"text-align:center;\">Chapter 7.1-7.3</td>\n",
     "        <td style=\"text-align:center;\">Can Xu</td>\n",
-    "        <td style=\"text-align:center;\">Second-level analysis (cont'd), Multiple comparison corrections</td>\n",
+    "        <td style=\"text-align:center;\">Second-level analysis (cont'd)</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
     "    <tr>\n",
@@ -410,7 +410,7 @@
     "        <td style=\"text-align:center;\">Study design</td>\n",
     "        <td style=\"text-align:center;\">Chapter 5.3</td>\n",
     "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
-    "        <td style=\"text-align:center;\">Multiple comparison corrections (cont'd)</td>\n",
+    "        <td style=\"text-align:center;\">Multiple comparison corrections </td>\n",
     "        <td style=\"text-align:center;\">HW2 due</td>\n",
     "    </tr>\n",
     "    <tr>\n",
