--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -407,9 +407,9 @@
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">11/4</td> \n",
-    "        <td style=\"text-align:center;\">Study design</td>\n",
-    "        <td style=\"text-align:center;\">Chapter 5.3</td>\n",
-    "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
+    "        <td style=\"text-align:center;\"></td>\n",
+    "        <td style=\"text-align:center;\"></td>\n",
+    "        <td style=\"text-align:center;\"></td>\n",
     "        <td style=\"text-align:center;\">Multiple comparison corrections </td>\n",
     "        <td style=\"text-align:center;\">HW2 due</td>\n",
     "    </tr>\n",
