Updated the outline for the iris data

--- a/MachineLearning.ipynb
+++ b/MachineLearning.ipynb
@@ -1651,6 +1651,7 @@
    "metadata": {},
    "source": [
     "* KNN classifier example: iris data\n",
+    "  * Balance between classes\n",
     "  * Training and testing data\n",
     "  * Assessing the results\n",
     "     * Confusion matrix\n",
