Started on KNN Iris example

--- a/MachineLearning.ipynb
+++ b/MachineLearning.ipynb
@@ -1650,6 +1650,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 8. KNN Example: iris data\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "Here, we apply the kNN method to the iris data. We will focus on ***two features (sepal length and petal width)***. But before doing that here are some things to consider.\n",
+    "\n",
+    "### Balance between classes\n",
+    "\n",
+    "It is important that the numbers of data points belonging to different classes are **balanced**. If classes were unbalanced (i.e., one class is more represented than the others), then your classifier might classify all observation into the most dominant class. For example, if there were 900 Setosas, 50 Versicolours, and 50 Virginicas, then a classifier could achieve close to 90% accuracy by classifying all observations as Setosas!\n",
+    "\n",
+    "### Training and testing data sets\n",
+    "\n",
+    "When you have a classifier, and want to examine how accurately it can classify, it is a good idea to have two separate data sets: training data and testing data. Both the features and the target labels from the training data set are used to generate a classifier. Then the feature information (but not target labels!) from the testing data is fit to the classifier, in order to examine how accurately it can classify, or predict the class labels. For this particular example, we will use 90 observations (or 60% of data) as the training data set, and the remaining 60 observations (or 40% of data) as the testing data set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* KNN classifier example: iris data\n",
     "  * Balance between classes\n",
     "  * Training and testing data\n",
